--- a/style.css
+++ b/style.css
@@ -370,9 +370,28 @@ section{
     padding: 10px;
 }
 
-.con-contact .form form textarea{
+.con-contact .form form .textarea-container {
+    position: relative;
+}
+
+.con-contact .form form textarea {
+    width: 100%;
     height: 200px;
     margin: 10px 0px 0px;
+    padding: 10px;
+}
+
+.con-contact .form form .mic {
+    position: absolute;
+    right: 10px; 
+    bottom: 10px; 
+    font-size: 1.5em; 
+    cursor: pointer;
+    z-index: 100; 
+}
+
+.con-contact .form form textarea::before {
+    content: "\2003"; 
 }
 
 .con-contact .form form .enviar{
